--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Timestamp Microservice</title>
+    <title>Request Header Parser Microservice</title>
     <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
